# HoangVu

./: CMakeLists.txt  README.md  mycontest  testlib
Anh Trung/contest01/: box47.cpp
AnhDuc/: 1252B.cpp  Barricades.cpp  danang.cpp  makenoobland.cpp  meteors.cpp
AnhVuong/: antree.cpp  apps.cpp  bitop.cpp  buildgraph.cpp  incsub.cpp  nuclear.cpp  twov.cpp
AnhVuong/Codes/: bmul.cpp  cyleaves.cpp
Bedao/id04/: REFI.cpp  SUDI.cpp  ZEZE.cpp  nand.cpp
CSacademy/: path-inversion.cpp  uniform-trees.cpp
Data Structure/BinaryIndexTree/: BIT.cpp  NTSEQ.cpp  test.cpp
Data Structure/Convex Hull/: convexhull.cpp
Data Structure/DSU/: dsu.cpp  qbmst.cpp
Data Structure/Heap/: buildheap.cpp  capturethecity.cpp  dispatching.cpp  heap.cpp  protect.cpp
Data Structure/LazyPropagation/: ITLADDERS.cpp  ORDERSET.cpp  QMAX.cpp
Data Structure/LiChaoTree/: lichaotree.cpp
Data Structure/PresistentSegtree/: MKTHNUM.cpp
Data Structure/Sparse Table/: qmax.cpp
Data Structure/SplayTree/: SplayTree.cpp
Data Structure/SqrtDecomposition/: maxqueries.cpp
Data Structure/Suffix-array/: suffixandlcp.cpp
Data Structure/SuffixAutomaton/: ilovestr.cpp  lcs.cpp  suffixautomaton.cpp
Data Structure/Treap/: dynamic_array.cpp  implicit_array.cpp
Data Structure/Trie/: SUBXOR.cpp  Trie.cpp  aho.inp  aho_corasick.cpp  dynamic_aho_corasick.cpp  emoticons.cpp  ilovestr.cpp  maxxor.cpp  sec.cpp  testgen.cpp
Data Structure/segmenttree/: Area.cpp  countdfr.cpp  gss.cpp  lowerbound.cpp  segmentmax.cpp  segmentodd.cpp  segmentsum.cpp  tempCodeRunnerFile.cpp
DivideandConquer/: marka.cpp  nearest.cpp
Doi Tuyen/De1/: AVERAG1.doc  ESEQ.docx  Gcd.doc  LIS.doc  NONGTRAI.doc  cezar-HT.doc  cezar.cpp  game.cpp  lis.cpp  nongtrai.cpp  seq.cpp  stupidcezar.cpp  virus.cpp  vong-tron-so.doc
Doi Tuyen/De1/hoangvu/: gcd.cpp  lis.cpp
Doi Tuyen/De2/: BÀI-TẬP-ĐỘI-DỰ-TUYỂN-SỐ-2.docx  beautiful.cpp  cross_bridge.cpp  select_number.cpp  smarket.cpp  tourism.cpp
Doi Tuyen/De3/: earthwindandfire.cpp  inasilentway.cpp  input.txt  judgement  judgement.cpp  king-crimsons.cpp  purple-haze.cpp  sex-pistols.cpp  silver-chariot.cpp  softandwet.cpp  sticky-fingers.cpp  walking-heart.cpp
Doi Tuyen/De4/: DE4.docx  arrmax.cpp  cake.cpp  clist.cpp  connect.cpp  division.cpp  findpath.cpp  mess.cpp  messages.cpp  money.cpp  radar.cpp  rank.cpp  sortpath.cpp  summaxk.cpp  timber.cpp  tourist.cpp
Doi Tuyen/De5/: ABC.docx  BSR.docx  BTN.docx  BTN1.docx  BTN2.docx  BTN3.docx  ab.docx  abc.cpp  bracket.cpp  bracket.docx  bsr.cpp  bt1.cpp  bt2.cpp  bt3.cpp  bt4.cpp  btn.cpp  btn1.cpp  btn2.cpp  btn3.cpp
Doi Tuyen/virus/: Settings.cfg  Solution.ppt  vius.docx
Doi Tuyen/virus/test01/: virus.inp
Doi Tuyen/virus/test02/: virus.inp
Doi Tuyen/virus/test03/: virus.inp
Doi Tuyen/virus/test04/: virus.inp
Doi Tuyen/virus/test05/: virus.inp
Doi Tuyen/virus/test06/: virus.inp
Doi Tuyen/virus/test07/: virus.inp
Doi Tuyen/virus/test08/: virus.inp
Doi Tuyen/virus/test09/: virus.inp
Doi Tuyen/virus/test10/: virus.inp
Doi Tuyen/virus/test11/: virus.inp
Doi Tuyen/virus/test12/: virus.inp
Doi Tuyen/virus/test13/: virus.inp
Doi Tuyen/virus/test14/: virus.inp
Doi Tuyen/virus/test15/: virus.inp
Doi Tuyen/virus/test16/: virus.inp
Doi Tuyen/virus/test17/: virus.inp
Doi Tuyen/virus/test18/: virus.inp
Duyen Hai/: CHANGE.cpp  MEETING.cpp  RICE.cpp  SET.cpp  SQUARE.cpp  board.cpp  replace.cpp
DuyenHai/: bonus.cpp
Dynamic Programming/: splitnumber.cpp
Dynamic Programming/Bitmask/: assignwork.cpp  floorboards.cpp  minhamilton.cpp
Dynamic Programming/Digit/: DPD1.cpp  Digitappearktimes.cpp
Graph/BFS/: BFS.cpp  otomat.cpp
Graph/CutandBrigde/: graph_.cpp
Graph/DFS/: DFS.cpp
Graph/Dijkstra/: binladen.cpp  dijkstra.cpp  qbschool.cpp  roads.cpp
Graph/Floyd/: floyd.cpp  roads-lad.cpp  shortestcycle.cpp
Graph/LongestPath/: LongPath.cpp
Graph/Matching/: bipartite.cpp
Graph/MaximumFlow/: hlpp.cpp
Graph/MinSpanningTree/: FastPrim.cpp  Kruskal.cpp  PrimHeap.cpp
Graph/StronglyConnected/: Tarjan.cpp
Graph/Trees/: MaxPath.cpp  balance.cpp  fselect.cpp  haha.cpp  lca.cpp  lcaoffline.cpp  makeprime.cpp  ptree.cpp  pwalk.cpp
Graph/cycleinGraph/: cycle.cpp
Greedy Algo/: flowers.cpp
Java/1343D/: CF1343D.java
Java/auction/: Main.java
Java/latgach/: Main.java
Java/latgach4/: Main.java
Khu ma tran/: fibonacci.cpp
NumberTheory/: GCDS.cpp  LCMS.cpp  checker.cpp  extended_euclid.cpp  mobiusfunction.cpp
PointandCircle/: ptcc.cpp
Recursion/Memoization/: HanoiTower.cpp
Spoj/: ADBRACK.cpp  BESTSPOT.cpp  BFCHAL.txt  BINARY2.cpp  C11CAVE.cpp  CWAY.cpp  CWAY.py  FFLOW.cpp  GRAPH_.cpp  GROUP.cpp  HIWAY2.cpp  KQUERY2.cpp  LIS.cpp  LOTT.cpp  LQDRACE.cpp  MESSAGE.cpp  METERAIN.cpp  MINROAD  NEAREST.cpp  NKCITY.cpp  NKINV.cpp  PALINX.cpp  PATULJCI.cpp  QMAX3.cpp  QTREE3.cpp  SEC.cpp  SHHV.cpp  VOTREE.cpp
String/: cprefix.cpp  kmp.cpp  z.cpp
Temp_f/: 1100F.cpp  1312E.cpp  1334F.cpp  757F.cpp  BWPOINTS.cpp  HnUVA.cpp  KDIFFERENT.cpp  bai1.cpp  candies.cpp  checker.cpp  cookie.cpp  dolls.cpp  linegame  pathlib.cpp  solution.cpp  testgen.cpp
Temp_f/de77/: ant.cpp  exarray.cpp  huyenbi.cpp  khoihcn.cpp  tongk.cpp
Temp_f/demen/: lenpownk.cpp  matrix.cpp  maxnum.cpp
Testgen/arrsum/: solution.cpp  testgen.cpp
Thay Vong/De6/: BOWLING  BOWLING.cpp
Thay Vong/sp05-slidingwindow/: lightroad.cpp
Thay Vong/sp08/: subarr.cpp
Thay Vong/sp09/: antique.cpp  rice.cpp
Thay Vong/sp10/: BOWLING.cpp
Thay Vong/sp12/: cutcloth.cpp
Thay Vong/sp13/: pathinctree.cpp
Thay Vong/sp15/: agency.cpp
Thay Vong/sp16/: colourpath.cpp
Trai he Mien Trung/Day 4/: gas.cpp  project.cpp
Trai he Mien Trung/Day2/: holiday.cpp
Trai he Mien Trung/Day4/: diophantine.cpp  project.cpp
Trai he Mien Trung/Day5/: convexhull.cpp
Trai he Mien Trung/Day6/: countmod.cpp
Trai he Mien Trung/Day7/: flowers.cpp  shopping.cpp  treecoloring.cpp
Trai he Mien Trung/Day8/: threetrees.cpp
Trai he Thai Nguyen/Day1/: D.cpp  F.cpp  I.cpp  coins.cpp
Trai he Thai Nguyen/Day4/: C.cpp
Trai he Thai Nguyen/Day5/: qmin.cpp
(+132 files in other folders)
